# New-Light

./: README.md
.github/instructions/: *.instructions.md
shader_system/: CMakeLists.txt  Example.cpp  README.md  ShaderCompiler.cpp  ShaderCompiler.h  ShaderManager.cpp  ShaderManager.h  ShaderTypes.cpp  ShaderTypes.h
shader_system/example_shaders/: basic.ps.hlsl  basic.vs.hlsl  pbr.vs.hlsl
